# Konnect

./: .dockerignore  Cargo.toml  DEV.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  tool-directory.md
.github/workflows/: e2e-kicad.yml
crates/konnect-core/: Cargo.toml
crates/konnect-core/src/: observability.rs
crates/konnect-core/src/mcp/: error.rs  handler.rs  protocol.rs  server.rs
crates/konnect-core/src/router/: meta_tools.rs  mod.rs  registry.rs
crates/konnect-core/src/tools/: cli.rs  config.rs  design_review.rs  integration.rs  library.rs  manufacturing.rs  mod.rs  pcb_board.rs  pcb_components.rs  pcb_export.rs  pcb_routing.rs  project.rs  sch_analysis.rs  sch_batch.rs  sch_bridge.rs  sch_components.rs  sch_export.rs  sch_wiring.rs  schematic_builder.rs  svg_import.rs  templates.rs  verification.rs
crates/konnect-core/tests/: integration_test.rs
crates/konnect-ipc/: build.rs
crates/konnect-ipc/src/: builders.rs  client.rs  gen.rs  lib.rs  types.rs
crates/konnect-schematic-editor/src/: lib.rs  library.rs  types.rs
crates/konnect-schematic-editor/src/schematic/: label.rs  misc.rs  mod.rs  symbol.rs  wire.rs
crates/konnect-schematic-editor/src/sexp/: mod.rs  parser.rs  writer.rs
crates/konnect-schematic-editor/tests/: integration.rs
crates/konnect-sexp/src/: geometry.rs  lib.rs  parser.rs  schematic.rs  writer.rs
crates/konnect/src/: config.rs  ffi.rs  install.rs  main.rs  manifest.rs
crates/konnect/src/transport/: stdio.rs
crates/konnect/tests/: protocol_stdio.rs
crates/schematic-viewer/: Cargo.toml  tauri.conf.json
crates/schematic-viewer/frontend/: index.html
crates/schematic-viewer/src/: main.rs
docker/: konnect.toml  smoke-test.sh
docs/: TROUBLESHOOTING.md
packaging/: build-pcm.ps1  build-pcm.sh  metadata.json
plugin/: __init__.py  settings_dialog.py
