[workspace]
resolver = "2"
members = [
    "crates/konnect",
    "crates/konnect-core",
    "crates/konnect-sexp",
    "crates/konnect-ipc",
    "crates/konnect-schematic-editor",
]
exclude = [
    "crates/schematic-viewer",  # Tauri app — built separately with `cargo tauri build`
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Konnect contributors"]
license = "AGPL-3.0-only"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# HTTP/SSE transport
axum = { version = "0.7", features = ["macros"] }

# S-expression parsing
nom = "7"

# NNG for KiCAD 10 IPC (nanomsg-next-gen, replaces ZeroMQ)
nng = "1"
prost = "0.13"
prost-types = "0.13"

# Config
toml = "0.8"

# HTTP client (JLCPCB, datasheets)
reqwest = { version = "0.12", features = ["json", "stream"] }

# SQLite (JLCPCB database)
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Base64 (image encoding for view tools)
base64 = "0.22"

# Platform directories (home dir, config dir)
dirs = "5"

# Internal crates
konnect-sexp = { path = "crates/konnect-sexp" }
konnect-ipc = { path = "crates/konnect-ipc" }
konnect-core = { path = "crates/konnect-core" }
konnect-schematic-editor = { path = "crates/konnect-schematic-editor" }
