[package]
name = "konnect-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
konnect-sexp.workspace = true
konnect-ipc.workspace = true
konnect-schematic-editor.workspace = true

prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
base64.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
usvg.workspace = true

[dev-dependencies]
tempfile = "3"
