[package]
name = "schematic-viewer"
version = "0.1.2"
license = "AGPL-3.0-only"
edition = "2021"
publish = false

# No lib — everything is in main.rs for simplicity
[[bin]]
name = "schematic-viewer"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
notify = "7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.bundle]
identifier = "com.konnect.schematic-viewer"
icon = ["icons/icon.png"]

[build-dependencies]
tauri-build = "2"
