[package]
name = "schematic-viewer"
version = "0.2.0"
license = "AGPL-3.0-only"
edition = "2021"
publish = false

# No lib — everything is in main.rs for simplicity
[[bin]]
name = "schematic-viewer"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
notify = "7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Not a workspace member (Tauri app, built separately), so this is a plain
# path dependency rather than `.workspace = true`.
konnect-schematic-editor = { path = "../konnect-schematic-editor" }

[dev-dependencies]
tempfile = "3"

[package.metadata.bundle]
identifier = "com.konnect.schematic-viewer"
icon = ["icons/icon.png"]

[build-dependencies]
tauri-build = "2"
